name:          magic
version:       0.1.0.0
synopsis:      Git imbued sorcery for programming wizards
description:   Git imbued sorcery for programming wizards.
homepage:      http://github.com/jystic/magic
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
copyright:     Jacob Stanley (c) 2012
category:      Development
build-type:    Simple
cabal-version: >= 1.8

executable magic
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:
      base            == 4.5.*
    , executable-path == 0.0.*
    , filepath        == 1.3.*
    , process         == 1.1.*
    , text            == 0.11.*

  ghc-options:
    -O -Wall
    -funbox-strict-fields
    -fwarn-tabs
